Change the default button of Network Wifi config dialog back to 'Connect'.

The default button was changed from 'Connect' to 'Cancel' in
https://codereview.chromium.org/2659973003, which caused the regression.

BUG=689795

Review-Url: https://codereview.chromium.org/2689633002
Cr-Commit-Position: refs/heads/master@{#449503}

Former-commit-id: 71afff610bb36f19c52564fc5801143fbeaab8f3